// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Result table - extract to columns > should be Entry prepared for saving files 1`] = `
{
  "method": "GET",
  "name": "a",
  "path": "/api/service/a",
  "query": "",
}
`;

exports[`Result table - extract to columns > should be Entry prepared for saving files also when url is just domain 1`] = `
{
  "method": "GET",
  "name": "",
  "path": "/",
  "query": "",
}
`;

exports[`Result table - extract to columns > should extract query parameters from URL 1`] = `
{
  "method": "GET",
  "name": "search",
  "path": "/complete/search",
  "query": "?q=test&limit=10",
}
`;
